@@ -23,6 +23,11 @@
  */
 
 use Xmf\Request;
+use XoopsModules\Modulebuilder\{
+    Helper
+};
+
+/** @var Helper $helper */
 
 // Define main template
 $templateMain = 'modulebuilder_modules.tpl';
@@ -31,6 +36,225 @@ require __DIR__ . '/header.php';
 // Recovered value of argument op in the URL $
 $op    = Request::getString('op', 'list');
 $modId = Request::getInt('mod_id');
+
+/**
+ * @param $tableName
+ *
+ * @return array
+ */
+function importFields($tableName)
+{
+    $table = $GLOBALS['xoopsDB']->prefix((string)$tableName);
+
+    $sql    = 'SHOW COLUMNS FROM ' . $table;
+    $result = $GLOBALS['xoopsDB']->query($sql);
+
+    $tFields = [];
+
+    while ($data = $GLOBALS['xoopsDB']->fetchBoth($result)) {
+        $t          = [];
+        $t['Field'] = $data['Field'];
+        $t['Type']  = $data['Type'];
+
+        if ('YES' === $data['Null']) {
+            $t['Null'] = 'NULL';
+        } else {
+            $t['Null'] = 'NOT NULL';
+        }
+        $t['Key']     = $data['Key'];
+        $t['Default'] = $data['Default'];
+        $t['Extra']   = $data['Extra'];
+
+        $t['Label'] = isset($data['Label']) ? $data['Label'] : '';
+
+        $h = strpos($data['Type'], '(');
+        $i = strpos($data['Type'], ')');
+        if (false === $h) {
+            $t['Len'] = 0;
+        } else {
+            $t['Type'] = substr($data['Type'], 0, $h);
+            if ('double' === $t['Type'] || 'float' === $t['Type'] || 'real' === $t['Type']) {
+                $t['Len'] = substr($data['Type'], $h + 1, $i - 1 - $h);
+            } else {
+                $t['Len'] = (int)substr($data['Type'], $h + 1, $i - 1 - $h);
+            }
+            if (strlen($data['Type']) > $i) {
+                $t['Signed'] = substr($data['Type'], $i + 2);
+            }
+        }
+
+        $tFields[$t['Field']] = $t;
+
+        return $tFields;
+    }
+}
+
+function importModule()
+{
+    $moduleName    = isset($_POST['moduleName']) ? $_POST['moduleName'] : 'newModule';
+    $moduleNewName = isset($_POST['moduleNewName']) ? $_POST['moduleNewName'] : $moduleName;
+    $moduleDirname = \preg_replace('/[^a-zA-Z0-9]\s+/', '', \mb_strtolower($moduleNewName));
+
+    $helper         = Helper::getInstance();
+    $modulesHandler = $helper->getHandler('Modules');
+    $newModule      = $modulesHandler->create();
+
+    $newModule->setVar('mod_name', $moduleNewName);
+    $newModule->setVar('mod_release', date('Y-m-d'));
+    $newModule->setVar('mod_dirname', $moduleDirname);
+
+    $newModule->setVar('mod_version', $helper->getConfig('version')); //$GLOBALS['xoopsModuleConfig']['version']);
+
+    $newModule->setVar('mod_since', $helper->getConfig('since'));
+    $newModule->setVar('mod_min_php', $helper->getConfig('min_php'));
+    $newModule->setVar('mod_min_xoops', $helper->getConfig('min_xoops'));
+    $newModule->setVar('mod_min_admin', $helper->getConfig('min_admin'));
+    $newModule->setVar('mod_min_mysql', $helper->getConfig('min_mysql'));
+
+    $newModule->setVar('mod_description', $helper->getConfig('description'));
+    $newModule->setVar('mod_author', $helper->getConfig('author'));
+    $newModule->setVar('mod_author_mail', $helper->getConfig('author_email'));
+    $newModule->setVar('mod_author_website_url', $helper->getConfig('author_website_url'));
+    $newModule->setVar('mod_author_website_name', $helper->getConfig('author_website_name'));
+    $newModule->setVar('mod_credits', $helper->getConfig('credits'));
+    $newModule->setVar('mod_license', $helper->getConfig('license'));
+    $newModule->setVar('mod_display_admin', $helper->getConfig('display_admin'));
+    $newModule->setVar('mod_display_user', $helper->getConfig('display_user'));
+    $newModule->setVar('mod_active_search', $helper->getConfig('active_search'));
+    $newModule->setVar('mod_active_comments', $helper->getConfig('active_comments'));
+    $newModule->setVar('mod_release_info', $helper->getConfig('release_info'));
+    $newModule->setVar('mod_release_file', $helper->getConfig('release_file'));
+    $newModule->setVar('mod_manual', $helper->getConfig('manual'));
+    $newModule->setVar('mod_manual_file', $helper->getConfig('manual_file'));
+    $newModule->setVar('mod_image', 'empty.png');
+    $newModule->setVar('mod_demo_site_url', $helper->getConfig('demo_site_url'));
+    $newModule->setVar('mod_demo_site_name', $helper->getConfig('demo_site_name'));
+    $newModule->setVar('mod_support_url', $helper->getConfig('support_url'));
+    $newModule->setVar('mod_support_name', $helper->getConfig('support_name'));
+    $newModule->setVar('mod_website_url', $helper->getConfig('website_url'));
+    $newModule->setVar('mod_website_name', $helper->getConfig('website_name'));
+    $newModule->setVar('mod_status', $helper->getConfig('status'));
+
+    $newModule->setVar('mod_admin', $helper->getConfig('display_admin'));
+    $newModule->setVar('mod_user', $helper->getConfig('display_user'));
+    $newModule->setVar('mod_search', $helper->getConfig('active_search'));
+    $newModule->setVar('mod_comments', $helper->getConfig('active_comments'));
+    $newModule->setVar('mod_notifications', $helper->getConfig('active_notifications'));
+    $newModule->setVar('mod_permissions', $helper->getConfig('active_permissions'));
+    $newModule->setVar('mod_donations', $helper->getConfig('donations'));
+    $newModule->setVar('mod_subversion', $helper->getConfig('subversion'));
+
+    if ($modulesHandler->insert($newModule)) {
+        // get the ID of the new module
+        $criteria     = new \Criteria('mod_name', $moduleNewName);
+        $moduleObject = $modulesHandler->getObjects($criteria, '', true);
+        $moduleId     = $moduleObject[0]->getVar('mod_id');
+        importTables($moduleId, $moduleName);
+    }
+}
+
+/**
+ * @param $moduleId
+ * @param $moduleName
+ */
+function importTables($moduleId, $moduleName)
+{
+    $helper        = Helper::getInstance();
+    $tablesHandler = $helper->getHandler('Tables');
+    $fieldsHandler = $helper->getHandler('Fields');
+    //mb---------------------------------------------
+    $moduleHandler = xoops_getHandler('module');
+    $module        = $moduleHandler->getByDirname($moduleName);
+    $moduleTables  = $module->getInfo('tables');
+
+    if (false !== $moduleTables && is_array($moduleTables)) {
+        foreach ($moduleTables as $table) {
+            //create a new tablesholder
+            $newTable = $tablesHandler->create();
+            $newTable->setVar('table_mid', $moduleId);
+
+            $newTable->setVar('table_name', $table);
+            $newTable->setVar('table_image', 'alert.png');
+
+            //get all the fields for this table
+            $importedFields = importFields($table);
+
+            //set the number of fields for this table
+            $countFields = count($importedFields);
+            $newTable->setVar('table_nbfields', $countFields);
+
+            $currentNumber = 0;
+
+            foreach ($importedFields as $t) {
+                $fieldsObj = $fieldsHandler->create();
+                $fieldsObj->setVar('field_mid', $moduleId);
+                $fieldsObj->setVar('field_tid', $newTable->getVar('table_id'));
+                $fieldsObj->setVar('field_order', $currentNumber);
+                $fieldsObj->setVar('field_name', $t['Field']);
+                $fieldsObj->setVar('field_type', $t['Type']);
+                $fieldsObj->setVar('field_value', $t['Len']);
+                $fieldsObj->setVar('field_attribute', $t['Signed'] ?? '');
+                $fieldsObj->setVar('field_null', $t['Null'] ?? '');
+                $fieldsObj->setVar('field_default', $t['Default']);
+
+                if (isset($t['Key'])) {
+                    if ('PRI' === $t['Key']) {
+                        $fieldsObj->setVar('field_key', 'primary');
+                    } else {
+                        if ('UNI' === $t['Key']) {
+                            $fieldsObj->setVar('field_key', 'unique');
+                        }
+                    }
+                }
+                $fieldsObj->setVar('field_element', $t['Field']);
+
+                if ($currentNumber < $countFields - 1) {
+                }
+
+                if (0 == $currentNumber) {
+                    if (in_array($t['Type'], ['blob', 'text', 'mediumblob', 'mediumtext', 'longblob', 'longtext', 'enum', 'set',])) {
+                        // XoopsFormTextArea
+                        $fieldsObj->setVar('field_element', '3');
+                    } elseif (in_array($t['Type'], ['int', 'integer', 'tinyint', 'smallint', 'mediumint', 'bigint', 'float', 'double', 'real', 'char', 'varchar',])) {
+                        //XoopsFormText
+                        $fieldsObj->setVar('field_element', '2');
+                    } elseif ('datetime' === $t['Type']) {
+                        //XoopsFormDateTime //XoopsFormDatePicker
+                        $fieldsObj->setVar('field_element', '21');
+                    } elseif ('date' === $t['Type']) {
+                        //XoopsFormTextDateSelect
+                        $fieldsObj->setVar('field_element', '15');
+                    }
+                } else {
+                    if ($currentNumber > 0) {
+                        if (in_array($t['Type'], ['blob', 'text', 'mediumblob', 'mediumtext', 'longblob', 'longtext', 'enum', 'set',])) {
+                            //XoopsFormTextArea
+                            $fieldsObj->setVar('field_element', '3');
+                        } elseif (in_array($t['Type'], ['int', 'integer', 'tinyint', 'smallint', 'mediumint', 'bigint', 'float', 'double', 'real', 'char', 'varchar',])) {
+                            //XoopsFormText
+                            $fieldsObj->setVar('field_element', '2');
+                        } elseif ('datetime' === $t['Type']) {
+                            //XoopsFormDateTime //XoopsFormDatePicker
+                            $fieldsObj->setVar('field_element', '21');
+                        } elseif ('date' === $t['Type']) {
+                            //XoopsFormTextDateSelect
+                            $fieldsObj->setVar('field_element', '15');
+                        }
+                    }
+                }
+
+                ++$currentNumber;
+
+                $fieldsHandler->insert($fieldsObj);
+            }
+
+            if ($tablesHandler->insert($newTable)) {
+                echo $table . ' Table has been imported <br>';
+                //success, redirect
+            }
+        }
+    }
+}
 
 switch ($op) {
     case 'list':
@@ -41,6 +265,9 @@ switch ($op) {
         $GLOBALS['xoTheme']->addStylesheet('modules/modulebuilder/assets/css/admin/style.css');
         $GLOBALS['xoopsTpl']->assign('navigation', $adminObject->displayNavigation('modules.php'));
         $adminObject->addItemButton(\_AM_MODULEBUILDER_MODULES_ADD, 'modules.php?op=new', 'add');
+
+        $adminObject->addItemButton(_AM_MODULEBUILDER_MODULES_IMPORT, 'import_module.php', 'compfile');
+
         $GLOBALS['xoopsTpl']->assign('buttons', $adminObject->displayButton('left'));
         $GLOBALS['xoopsTpl']->assign('tdmc_url', TDMC_URL);
         $GLOBALS['xoopsTpl']->assign('tdmc_upload_imgmod_url', TDMC_UPLOAD_IMGMOD_URL);
@@ -82,6 +309,11 @@ switch ($op) {
         $form       = $modulesObj->getFormModules();
         $GLOBALS['xoopsTpl']->assign('form', $form->render());
         break;
+
+    case 'modules_import':
+        importModule();
+        break;
+
     case 'save':
         if (!$GLOBALS['xoopsSecurity']->check()) {
             \redirect_header('modules.php', 3, \implode(',', $GLOBALS['xoopsSecurity']->getErrors()));
@@ -209,11 +441,11 @@ switch ($op) {
             }
         } else {
             $xoopsconfirm = new \XoopsModules\Modulebuilder\Common\XoopsConfirm(
-                                        ['ok' => 1, 'mod_id' => $modId, 'op' => 'delete'],
-                                        \Xmf\Request::getString('REQUEST_URI', '', 'SERVER'),
-                                        $modulesObj->getVar('mod_name')
-                            );
-            $form = $xoopsconfirm->getFormXoopsConfirm();
+                ['ok' => 1, 'mod_id' => $modId, 'op' => 'delete'],
+                \Xmf\Request::getString('REQUEST_URI', '', 'SERVER'),
+                $modulesObj->getVar('mod_name')
+            );
+            $form         = $xoopsconfirm->getFormXoopsConfirm();
             $GLOBALS['xoopsTpl']->assign('form', $form->render());
         }
         break;
@@ -240,19 +472,19 @@ switch ($op) {
             //clone data table modules
             $modulesHandler = $helper->getHandler('Modules');
             $tablesHandler  = $helper->getHandler('Tables');
-            $fieldsHandler = $helper->getHandler('Fields');
-            $moduleSource = $modulesHandler->get($modIdSource);
-            $moduleTarget = $modulesHandler->create();
-            $sourceVars = $moduleSource->getVars();
+            $fieldsHandler  = $helper->getHandler('Fields');
+            $moduleSource   = $modulesHandler->get($modIdSource);
+            $moduleTarget   = $modulesHandler->create();
+            $sourceVars     = $moduleSource->getVars();
             foreach ($sourceVars as $varKey => $varArray) {
                 if ('mod_id' !== $varKey) {
                     if (in_array($varKey, ['mod_name', 'mod_dirname'])) {
                         for ($i = 1; $i <= 10; $i++) {
                             $uniqValue = $varArray['value'] . $i;
-                            $result = $GLOBALS['xoopsDB']->query(
+                            $result    = $GLOBALS['xoopsDB']->query(
                                 'SELECT * FROM ' . $GLOBALS['xoopsDB']->prefix('modulebuilder_modules') . " as ms WHERE ms.{$varKey} = '{$uniqValue}'"
                             );
-                            $num_rows = $GLOBALS['xoopsDB']->getRowsNum($result);
+                            $num_rows  = $GLOBALS['xoopsDB']->getRowsNum($result);
                             if ($num_rows == 0) {
                                 break;
                             }
@@ -262,7 +494,7 @@ switch ($op) {
                         $moduleTarget->setVar($varKey, $varArray['value']);
                     }
                 }
-}
+            }
 
             if ($modulesHandler->insert($moduleTarget)) {
                 //get new mod_id
@@ -275,13 +507,13 @@ switch ($op) {
             $resultTables = $GLOBALS['xoopsDB']->query(
                 'SELECT table_id FROM ' . $GLOBALS['xoopsDB']->prefix('modulebuilder_tables') . " as ts WHERE ts.table_mid = '{$modIdSource}'"
             );
-            $num_rows1 = $GLOBALS['xoopsDB']->getRowsNum($resultTables);
+            $num_rows1    = $GLOBALS['xoopsDB']->getRowsNum($resultTables);
             if ($num_rows1 > 0) {
                 while (false !== ($myTables = $GLOBALS['xoopsDB']->fetchArray($resultTables))) {
                     $tableIdSource = $myTables['table_id'];
-                    $tableSource = $tablesHandler->get($tableIdSource);
-                    $tableTarget = $tablesHandler->create();
-                    $sourceVars = $tableSource->getVars();
+                    $tableSource   = $tablesHandler->get($tableIdSource);
+                    $tableTarget   = $tablesHandler->create();
+                    $sourceVars    = $tableSource->getVars();
                     foreach ($sourceVars as $varKey => $varArray) {
                         //skip table_id
                         if ('table_id' !== $varKey) {
@@ -304,13 +536,13 @@ switch ($op) {
                     $resultFields = $GLOBALS['xoopsDB']->query(
                         'SELECT field_id FROM ' . $GLOBALS['xoopsDB']->prefix('modulebuilder_fields') . " as fs WHERE fs.field_tid = '{$tableIdSource}'"
                     );
-                    $num_rows2 = $GLOBALS['xoopsDB']->getRowsNum($resultFields);
+                    $num_rows2    = $GLOBALS['xoopsDB']->getRowsNum($resultFields);
                     if ($num_rows2 > 0) {
                         while (false !== ($myField = $GLOBALS['xoopsDB']->fetchArray($resultFields))) {
                             $fieldIdSource = $myField['field_id'];
-                            $fieldsSource = $fieldsHandler->get($fieldIdSource);
-                            $fieldsTarget = $fieldsHandler->create();
-                            $sourceVars = $fieldsSource->getVars();
+                            $fieldsSource  = $fieldsHandler->get($fieldIdSource);
+                            $fieldsTarget  = $fieldsHandler->create();
+                            $sourceVars    = $fieldsSource->getVars();
                             foreach ($sourceVars as $varKey => $varArray) {
                                 //skip field_id
                                 if ('field_id' !== $varKey) {
@@ -335,10 +567,6 @@ switch ($op) {
 
             \redirect_header('modules.php', 5, \_AM_MODULEBUILDER_MODULE_CLONE_SUCCESS);
         }
-
-
-
-
 
         break;
 }
